--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,24 @@
 [build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
 name = "nopecha"
-version = "1.0.9"
+version = "2.0.0"
 authors = [
-    {name="NopeCHA", email="nopechasolver@gmail.com"},
+	{ name="NopeCHA", email="contact@nopecha.com" },
 ]
-description = "NopeCHA Python Library"
+description = "API bindings for the NopeCHA CAPTCHA-solving service."
 readme = "README.md"
-requires-python = ">=3.7.1"
+require_python = ">=3.7.1"
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
 ]
 
 [project.urls]
-"Homepage" = "https://nopecha.com"
-"Documentation" = "https://developers.nopecha.com"
+Homepage = "https://nopecha.com"
+Documentation = "https://developers.nopecha.com"
 "GitHub Repository" = "https://github.com/NopeCHALLC/nopecha-python"
+
